# project-and-dissertation

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CONTRIBUTORS.md  LICENSE.md  README.md  contributing.md  docker-compose.yml  run.sh  stop.sh
deploy/: inventory  playbook.yml
deploy/roles/event-bus-dependencies/files/: docker-compose-production.yml
deploy/roles/event-bus-dependencies/tasks/: main.yml
deploy/roles/event-bus/files/: docker-compose.yml
dissertation/: Makefile  dissertation.aux  dissertation.bbl  dissertation.bib  dissertation.blg  dissertation.fdb_latexmk  dissertation.fls  dissertation.out  dissertation.tex  technical.tex
dissertation/figures/: consistency-1.tex  consistency-2.tex  consistency-3.tex  microservices.tex
docker/: base.yml  event-bus.yml  persistence.yml
docs/: consistency.md  messages.md
docs/Client Apps/: README.md  TransactionService.feature
docs/userstories/: AccountsService.feature
event-bus/: Cargo.toml  Dockerfile
event-bus/src/: common.rs  context.rs  main.rs  server.rs  state.rs
event-bus/src/consumer/: mod.rs
event-bus/src/producer/: mod.rs  new.rs  query.rs  register.rs
persistence/: .gitignore
persistence/connect-custom/: Dockerfile  couchbase-sink.properties  elasticsearch-sink.properties  mongo-sink.properties  sqlite-sink.properties  worker.properties
persistence/mongo-configure/: Dockerfile  config.json  entrypoint.sh
specifications/: CONSISTENCY.md  CORRELATION.md  EVENTSCHEMAS.md  MESSAGES.md  SAMPLES.md  UserService.feature
websockets-demo/: index.html
(+3 files in other folders)
