[package]
name = "event-bus"
version = "0.1.0"
authors = [
        "Connor Jardine <connorjardine97@gmail.com>",
        "Frank Bojen <f.bojen@gmail.com>",
        "Naji Shehab <naji.shehab@hotmail.com>",
        "Patrick Menlove <patrickmenlove@hotmail.co.uk>",
        "David Wood <david@davidtw.co>"
]
description = """
Event Bus Research Prototype for Avaloq
Built by Team SED for the University of Glasgow Level 3 Team Project
"""


[dependencies]
chrono = "0.4.0"
clap = "2.27.1"
colored = "1.6.0"
fern = "0.4.3"
futures = "0.1.17"
futures-cpupool = "0.1.7"
log = "0.3.8"
rdkafka = "0.13.0"
tokio-core = "0.1.10"
